--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0040)http://icnp2016.comp.nus.edu.sg/ -->
-<!-- Author: Royce Niu niu.networkml.2016(A)zhixiong.org -->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -72,7 +70,7 @@
                                             <li><a href="program.html">Program</a></li>
                                             <li><a href="index.html#call-for-papers">CFP</a></li>
                                             <li><a href="index.html#submission-instructions">Submission</a></li>
-                                            <!--<li><a href="https://networkml2016.cs.cityu.edu.hk/hotcrp">Submission page</a></li>-->
+                                            <li><a href="">Submission page</a></li>
                                             <li><a href="index.html#important-dates">Important dates</a></li>
                                             <li><a href="index.html#organizers">Organizers</a></li>
                                             <li><a href="http://iqua.ece.toronto.edu/icnp17">ICNP 2017</a></li>
@@ -119,7 +117,8 @@
                                     <p>
                                     Submitted papers must be no longer than 6 pages (US letter size, 10 point font, 12 point leading, 7 inch by 9.25 inch text block) including all content and references. The <a href="http://conferences.sigcomm.org/sigcomm/2010/sig-alternate-10pt.cls">sig-alternate-10pt.cls</a> style file satisfies the formatting requirements. Compile your source with options that produce letter page size. All submissions must include names and affiliations of all authors on the title page (no anonymization). Papers must contain novel ideas and must differ significantly in content from previously published papers and papers under simultaneous submission.</p>
                                     
-                                    <p>Please upload your submissions to the workshop <a href="https://networkml2016.cs.cityu.edu.hk/hotcrp">submission page</a>.</p>
+                                    <!--<p>Please upload your submissions to the workshop <a href="https://networkml2016.cs.cityu.edu.hk/hotcrp">submission page</a>.</p>-->
+                                    <p>The submission system will appear soon.</p>
                                     <h2 id="important-dates">Important dates</h2>
                                     <ul>
                                         <li>Paper submission: July 31th, 2017 </li>
