--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
                                         <li>Kai Chen, HKUST, HK</li>
                                         <li>Minghua Chen, Chinese University of Hong Kong, HK</li>
                                         <li>Xin Jin, Johns Hopkins University, USA</li>
+                                        <li>Weichao Li, Huawei Future Network Theory Lab, HK</li>
                                         <li>Fangming Liu, Huazhong University of Science and Technology, China</li>
-                                        <li>John Lui, Chinese University of Hong Kong, HK</li>
-                                        <li>Xue Liu, McGill University, Canada</li>
                                         <li>Chen Qian, University of California Santa Cruz, USA</li>
                                         <li>Wei Wang, HKUST, HK</li>
                                         <li>Ying Zhang, Facebook, US</li>
