--- a/index.html
+++ b/index.html
@@ -146,8 +146,12 @@
 
                                     <p>Steering Committee:</p>
                                     <ul>
-                                        <li>Baochun Li, University of Toronto, Canada</li>
-                                        <li>John C.S. Lui, Chinese University of Hong Kong, HK</li>
+                                        <li>Rocky K. C. Chang, The Hong Kong Polytechnic University, HK</li>
+                                        <li>John Crowcroft, University of Cambridge, UK</li>
+                                        <li>John C.S. Lui, The Chinese University of Hong Kong, HK</li>
+                                        <li>David Meyer, Brocade Communications, USA</li>
+                                        <li>K. K. Ramakrishnan, UC Riverside, USA</li>
+                                        <li>Nicholas Zhang, Huawei Future Network Theory Lab, HK</li>
                                     </ul>
                   </div>
                 </td>
