--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                             <li><a href="program.html">Program</a></li>
                                             <li><a href="index.html#call-for-papers">CFP</a></li>
                                             <li><a href="index.html#submission-instructions">Submission</a></li>
-                                            <li><a href="">Submission page</a></li>
+                                            <li><a href="https://easychair.org/conferences/?conf=mlainetwork2017">Submission page</a></li>
                                             <li><a href="index.html#important-dates">Important dates</a></li>
                                             <li><a href="index.html#organizers">Organizers</a></li>
                                             <li><a href="http://iqua.ece.toronto.edu/icnp17">ICNP 2017</a></li>
