--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                     <p>The submission system will appear soon.</p>
                                     <h2 id="important-dates">Important dates</h2>
                                     <ul>
-                                        <li>Paper submission: July 31th, 2017 </li>
+                                        <li>Paper submission: <S>July 31th, 2017</S> August 7, 2017</li>
                                         <li>Notification of decision: August 22th, 2017</li>
                                         <li>Camera-ready: September 1st, 2017</li>
                                     </ul>
