--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                                     <p>
                                     Submitted papers must be no longer than 6 pages (US letter size, 10 point font, 12 point leading, 7 inch by 9.25 inch text block) including all content and references. The <a href="http://conferences.sigcomm.org/sigcomm/2010/sig-alternate-10pt.cls">sig-alternate-10pt.cls</a> style file satisfies the formatting requirements. Compile your source with options that produce letter page size. All submissions must include names and affiliations of all authors on the title page (no anonymization). Papers must contain novel ideas and must differ significantly in content from previously published papers and papers under simultaneous submission.</p>
                                     
-                                    <!--<p>Please upload your submissions to the workshop <a href="https://networkml2016.cs.cityu.edu.hk/hotcrp">submission page</a>.</p>-->
-                                    <p>The submission system will appear soon.</p>
+                                    <p>Please upload your submissions to the workshop <a href="https://easychair.org/conferences/?conf=mlainetwork2017">submission page</a>.</p>
+                                    <!-- <p>The submission system will appear soon.</p>-->
                                     <h2 id="important-dates">Important dates</h2>
                                     <ul>
-                                        <li>Paper submission: <S>July 31th, 2017</S> August 7, 2017</li>
-                                        <li>Notification of decision: August 22th, 2017</li>
-                                        <li>Camera-ready: September 1st, 2017</li>
+                                        <li>Paper submission: <S>July 31th, 2017</S> August 7th, 2017</li>
+                                        <li>Notification of decision: <S>August 22th, 2017</S> August 29th, 2017</li>
+                                        <li>Camera-ready: <S>September 1st, 2017</S> Spetember 15th, 2017</li>
                                     </ul>
                                     <h2 id="organizers">Organizers</h2>
                                     <p>Program Co-chairs:</p>
