--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                                     <h2 id="important-dates">Important dates</h2>
                                     <ul>
                                         <li>Paper submission: <S>July 31th, 2017</S> August 7th, 2017</li>
-                                        <li>Notification of decision: <S>August 22th, 2017</S> August 29th, 2017</li>
-                                        <li>Camera-ready: <S>September 1st, 2017</S> Spetember 15th, 2017</li>
+                                        <li>Notification of decision: <S>August 22th, 2017</S> August 28th, 2017</li>
+                                        <li>Camera-ready: September 2nd, 2017</li>
                                     </ul>
                                     <h2 id="organizers">Organizers</h2>
                                     <p>Program Co-chairs:</p>
